src/objects/OutboundSMS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FromLabel__c</fullName>
        <label>From Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <label>Return URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Outbound SMS</label>
</CustomObject>